Design and content changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Omicron Tech Events Consulting</title>
+    <title>Omicron</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="favicon (3).ico" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -25,9 +26,10 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Omicron</span>
-      <img class="img-fluid" src="img/omitest.png" alt=""></a>
-      <span class="site-heading-lower">Event Planning Specialists</span>
+      <img class="img-fluid" src="img/white_withtext.png" alt="" width="300" height="300"></a>
+      <br>
+      <br>
+      <span class="site-heading-lower">Hackathon Consulting</span>
     </h1>
 
     <!-- Navigation -->
@@ -39,20 +41,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <a> <img class="img-fluid" src="img/omitest.png" alt=""></a>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link js-scroll-trigger" href="#About">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link js-scroll-trigger" href="#Our Events">Our Events</a>
+              <a class="nav-link js-scroll-trigger" href="#events">Our Events</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link js-scroll-trigger" href="#Our Partners">Our Partners</a>
+              <a class="nav-link js-scroll-trigger" href="#partners">Our Partners</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link js-scroll-trigger" href="#Contact">Contact</a>
@@ -65,16 +66,16 @@
     <section class="page-section clearfix">
       <div class="container">
         <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/tech.jpg" alt="">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/booth.jpg" alt="">
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Tech Events</span>
               <span class="section-heading-lower">Planned to your needs</span>
             </h2>
-            <p class="mb-3">Every one of our events is catered to your specifications, will be able to generate a captivated audience.
+            <p class="mb-3">Whether it's a conference or a hackathon, we can help your event in many ways.
             </p>
             <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#">Visit us today!</a>
+              <a class="btn btn-primary btn-xl" href="#Contact">Looking to host an event?</a>
             </div>
           </div>
         </div>
@@ -90,14 +91,14 @@
                 <span class="section-heading-upper">Our Promise</span>
                 <span class="section-heading-lower">To You</span>
               </h2>
-              <p class="mb-0">We will make sure that your event has the neccessary funding, in-kind sponsorships, and also high level speakers, so that your event can be the best that it can be. At Omicron, we dedicate ourselves into making each tech event special, and memorable!</p>
+              <p class="mb-0">We will make sure that your event has the neccessary resources so that it can be the best that it can be. At Omicron, we dedicate ourselves into making each tech event special, and memorable!</p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-     <section class="page-section about-heading" id="About">
+     <section class="page-section about-heading" id="about">
       <div class="container">
         <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/hackathon.jpg" alt="">
         <div class="about-heading-content">
@@ -105,11 +106,10 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Tech Events</span>
+                  <span class="section-heading-upper">Our services</span>
                   <span class="section-heading-lower">What we do</span>
                 </h2>
-                <p>Founded in October 2017, the co-founders, Ryan Li and Kevin Shen have worked continously to bring tech events the neccessary sponsorship of in-kinds, monetary, and high profile speakers. The organization was founded after THacks 2 with the Toronto Hacker Club, and since them, Omicron has been continously growing and reahcing out to more events. Our service, specializes in planning hackathons, tech socials, large scale gaming events, and lots more!</p>
-                <p class="mb-0">We guarantee that you will <em>never</em> have to worry about your event not being enjoyable or unmemorable.</p>
+                <p>Omicron is a hackathon consulting and sponsorship brokerage venture. Founded in October 2017, our team has worked continously to bring tech events the neccessary sponsorship of in-kinds, monetary, resources, and high profile speakers. Our team has a strong network in the hackathon community with an emphasis on acquiring funding for events. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more!</p>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-      <section class="page-section" id="Our Events">>
+      <section class="page-section" id="events">>
       <div class="container">
         <div class="product-item">
           <div class="product-item-title d-flex">
@@ -131,30 +131,25 @@
           <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/hth.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">For our first event after THacks 2, we worked with Hack the Hammer, a high school hackathon in Hamilto to help raise funds. Some special things that were were able to aquire would include Github swag, Tim Jackson CEO Of SHAD as a keynote speaker, a lot of local startups, .tech domains, discounts on food, and lots more! A full list of sponsors aquired for the event can be found at hackthehammer.com</p>
+              <p class="mb-0">We are an official partner of Hack the Hammer, Hamilton's largest high school hackathon. Omicron connected Hack The Hammer to Github swag, their keynote speaker: Tim Jackson, CEO of SHAD, local startups, domains, discounts on food, and lots more! A full list of sponsors aquired for the event can be found at <a href="http://www.hackthehammer.com"> hackthehammer.com </a> </p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-      <section class="page-section" id="Our Partners">
+    <br>
+      <section class="page-section" id="partners">
       <div class="container">
         <div class="product-item">
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Our Highly Valued Partners</span>
-                <span class="section-heading-lower">.tech</span>
+                <span class="section-heading-upper">Our Partners</span>
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="Photos/dotf.jpg" alt="">
-          <div class="product-item-description d-flex mr-auto">
-            <div class="bg-faded p-5 rounded">
-              <p class="mb-0">.tech is one of our highly valued partners that has helped provide us with our domain, and domain deals for all future hackathons! We will be partnering with them through all of our projects!</p>
-            </div>
-          </div>
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/.tech.png" width="500" alt="">
         </div>
       </div>
     </section>
@@ -167,21 +162,12 @@
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Don't Hesitate to ask for a consultation</span>
                 <span class="section-heading-lower">First one is on us!</span>
-                <span class="section-heading-upper">Contact Info</span>
-                <img class="img-fluid" src="Photos/omitest.png" alt=""></a>
+                <!-- <img class="img-fluid" src="Photos/omitest.png" alt=""></a> -->
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  General Information
+                  We can be reached at:
                   <span class="ml-auto">contact@omcn.tech</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Ryan Li
-                  <span class="ml-auto">liryan914@gmail.com</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Kevin Shen
-                  <span class="ml-auto">kshen3778@gmail.com</span>
                 </li>
               </ul>
             </div>
@@ -199,10 +185,10 @@
             <a href="https://twitter.com/OmicronContact"><img class="img-fluid" src="img/ticon.png" alt=""><img/></a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/omicronconsulting/"><img class="img-fluid" src="img/iicon.png" alt=""><img/></a>  
-          </li>     
+            <a href="https://www.instagram.com/omicronconsulting/"><img class="img-fluid" src="img/iicon.png" alt=""><img/></a>
+          </li>
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/company/11442751/"><img class="img-fluid" src="img/licon.png" alt=""><img/></a>   
+            <a href="https://www.linkedin.com/company/11442751/"><img class="img-fluid" src="img/licon.png" alt=""><img/></a>
           </li>
                 <p class="m-0 small">Copyright &copy; Omicron 2018</p>
       </div>
