Renamed dot tech img

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/.tech.png" width="500" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/dottech.png" width="500" alt="">
         </div>
       </div>
     </section>
