--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
               </h2>
             </div>
           </div>
+          <a href="http://hackthehammer.com/" target="_blank">
           <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/hth.jpg" alt="">
+          </a>
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">We are an official partner of Hack the Hammer, Hamilton's largest high school hackathon. Omicron connected Hack The Hammer to Github swag, their keynote speaker: Tim Jackson, CEO of SHAD, local startups, domains, discounts on food, and lots more! A full list of sponsors aquired for the event can be found at <a href="http://www.hackthehammer.com"> hackthehammer.com </a> </p>
@@ -149,7 +151,9 @@
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/dottech.png" width="500" alt="">
+          <a href="http://get.tech/" target="_blank">
+            <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/dottech.png" width="500" alt="">
+          </a>
         </div>
       </div>
     </section>
