--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <span class="section-heading-upper">Our Promise</span>
                 <span class="section-heading-lower">To You</span>
               </h2>
-              <p class="mb-0">We will make sure that your event has the neccessary resources so that it can be the best that it can be. At Omicron, we dedicate ourselves into making each tech event special, and memorable!</p>
+              <p class="mb-0">We will make sure that your event has the necessary resources so that it can be the best that it can be. At Omicron, we dedicate ourselves into making each tech event special, and memorable!</p>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
                 <span class="section-heading-upper">Don't Hesitate to ask for a consultation</span>
-                <span class="section-heading-lower">First one is on us!</span>
+                <span class="section-heading-lower">We are happy to help!</span>
                 <!-- <img class="img-fluid" src="Photos/omitest.png" alt=""></a> -->
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
