--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <span class="section-heading-upper">Our services</span>
                   <span class="section-heading-lower">What we do</span>
                 </h2>
-                <p>Omicron is a hackathon consulting and sponsorship brokerage venture. Founded in October 2017, our team has worked continously to bring tech events the neccessary sponsorship of in-kinds, monetary, resources, and high profile speakers. Our team has a strong network in the hackathon community with an emphasis on acquiring funding for events. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more!</p>
+                <p>Omicron is a hackathon consulting and sponsorship brokerage venture. Founded in October 2017, our team has worked continously to bring tech events the necessary sponsorship of in-kinds, monetary, resources, and high profile speakers. Our team has a strong network in the hackathon community with an emphasis on acquiring funding for events. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more!</p>
               </div>
             </div>
           </div>
