--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
           <a href="http://get.tech/" target="_blank">
             <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/dottech.png" width="500" alt="">
           </a>
+          <a href="http://www.techtoronto.org/" target="_blank">
+            <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/techlong.png" width="500" alt="">
+          </a>
         </div>
       </div>
     </section>
