Discription Fix + TechTO Picture

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <span class="section-heading-upper">Our services</span>
                   <span class="section-heading-lower">What we do</span>
                 </h2>
-                <p>Omicron is a hackathon consulting and sponsorship brokerage venture. Founded in October 2017, our team has worked continously to bring tech events the necessary sponsorship of in-kinds, monetary, resources, and high profile speakers. Our team has a strong network in the hackathon community with an emphasis on acquiring funding for events. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more!</p>
+                <p>Omicron is a hackathon consulting and sponsor relations management venture. Founded in October 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more! We also help companies collect feedback for product development, expand their developer communities, and improve their marketing presence through hackathons.</p>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
             <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/dottech.png" width="500" alt="">
           </a>
           <a href="http://www.techtoronto.org/" target="_blank">
-            <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/techlong.png" width="500" alt="">
+            <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/whitetechto.png" width="500" alt="">
           </a>
         </div>
       </div>
