--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
           </div>
         </div>
       </div>
+        <div class="container">
+        <div class="product-item">
+          <div class="product-item-title d-flex">
+            <div class="bg-faded p-5 d-flex ml-auto rounded">
+              <h2 class="section-heading mb-0">
+                <span class="section-heading-upper">Junior Economic Club</span>
+                <span class="section-heading-lower">Economic Forum</span>
+              </h2>
+            </div>
+          </div>
+          <a href="https://www.jectoronto.org/ef-18" target="_blank">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/jec.jpg" alt="">
+          </a>
+          <div class="product-item-description d-flex mr-auto">
+            <div class="bg-faded p-5 rounded">
+              <p class="mb-0">We were helping JEC's Economic Forum provide hardware for participants to use, and we were also able to provide two tickets to the March TechTO Monthly Meetup as prizes! </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <br>
