FUCK YEAH THE SPACE WORKS

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         </div>
       </div>
         <div class="container">
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/transparent.png" alt="">
         <div class="product-item">
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
@@ -153,7 +154,7 @@
           </a>
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We were helping JEC's Economic Forum provide hardware for participants to use, and we were also able to provide two tickets to the March TechTO Monthly Meetup as prizes! </p>
+              <p class="mb-0">We helped JEC's Economic Forum provide hardware for participants to use, and we were also able to provide two tickets to the March TechTO Monthly Meetup as prizes! </p>
             </div>
           </div>
         </div>
