--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
           <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/booth.jpg" alt="">
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Tech Events</span>
-              <span class="section-heading-lower">Planned to your needs</span>
+              <span class="section-heading-upper">Event Management</span>
+              <span class="section-heading-lower">An event planned to your needs</span>
             </h2>
-            <p class="mb-3">Whether it's a conference or a hackathon, we can help your event in many ways.
+            <p class="mb-3">Whether it's a recruitment event, hackathon, or conference, we can help you in many ways.
             </p>
             <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#Contact">Looking to host an event?</a>
+              <a class="btn btn-primary btn-xl" href="#Contact">Thinking of hosting an event?</a>
             </div>
           </div>
         </div>
@@ -88,10 +88,10 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Our Promise</span>
-                <span class="section-heading-lower">To You</span>
+                <span class="section-heading-upper">Innovation Consulting</span>
+                <span class="section-heading-lower">Bringing solutions to problems</span>
               </h2>
-              <p class="mb-0">We will make sure that your event has the necessary resources so that it can be the best that it can be. At Omicron, we dedicate ourselves into making each tech event special, and memorable!</p>
+              <p class="mb-0">Omicron believes that a hackathon is a place for innovation and problem solving. Challenges faced by companies, government, and organizations can be tackled and solved. If you are an organization, we encourage you to take advantage of our hackathons to find creative solutions to your most salient problems. Let us know how we can help you!</p>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
                   <span class="section-heading-upper">Our services</span>
                   <span class="section-heading-lower">What we do</span>
                 </h2>
-                <p>Omicron is a hackathon consulting and sponsor relations management venture. Founded in October 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many hackathons, tech socials, large scale gaming events, and lots more! We also help companies collect feedback for product development, expand their developer communities, and improve their marketing presence through hackathons.</p>
+                <p>Omicron is a hackathon management and consulting venture. We help companies and organizations enter the growing hackathon space to find new markets, acquire talent, and achieve their goals. Founded in October 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many organizations, hackathons, tech socials, and large scale gaming events. We help companies in our network collect feedback for product development, expand their developer communities, conduct recruitment, and improve their marketing presence through hackathons.</p>
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
           </a>
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We are an official partner of Hack the Hammer, Hamilton's largest high school hackathon. Omicron connected Hack The Hammer to Github swag, their keynote speaker: Tim Jackson, CEO of SHAD, local startups, domains, discounts on food, and lots more! A full list of sponsors aquired for the event can be found at <a href="http://www.hackthehammer.com"> hackthehammer.com </a> </p>
+              <p class="mb-0">We are an official partner of Hack the Hammer, Hamilton's largest high school hackathon. </p>
             </div>
           </div>
         </div>
@@ -154,7 +154,7 @@
           </a>
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We helped JEC's Economic Forum provide hardware for participants to use, and we were also able to provide two tickets to the March TechTO Monthly Meetup as prizes! </p>
+              <p class="mb-0">We are an official partner of JEC's Economic Forum, providing hardware and prizes.</p>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Don't Hesitate to ask for a consultation</span>
+                <span class="section-heading-upper">Don't hesitate to reach out to us</span>
                 <span class="section-heading-lower">We are happy to help!</span>
                 <!-- <img class="img-fluid" src="Photos/omitest.png" alt=""></a> -->
               </h2>
