--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										<header class="major">
 											<h2>About Omicron</h2>
 										</header>
-										<p>Omicron is a hackathon management and consulting venture. We help companies and organizations enter the growing hackathon space to find new markets, acquire talent, and solve their problems. Founded in October 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many organizations, hackathons, tech socials, and large scale gaming events. <p>
+										<p>Omicron is a hackathon management and consulting venture. We help companies and organizations enter the growing hackathon space to find new markets, acquire talent, and discover innovative solutions. Founded in 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many organizations, hackathons, tech socials, and large scale gaming events. <p>
 									</div>
 									<span class="image"><img src="images/android.jpg" alt="" /></span>
 								</div>
