--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
 							<h2>Contact Us</h2>
 							<dl class="alt">
 								<dt>Email</dt>
-								<dd><b>kevin.shen@omcn.tech</b></dd>
-								<dd><b>ryan.li@omcn.tech</b></dd>
+								<dd><b>contact@omcn.tech</b></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="https://www.facebook.com/omicrontech/" target="_blank" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
