--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/white_withtext.png" alt="" /></span>
-						<h1>Your event, to your perfection</h1>
+						<h1>Helping Companies Create Better Tech</h1>
 					</header>
 
 				<!-- Nav -->
@@ -50,7 +50,7 @@
 										<header class="major">
 											<h2>About Omicron</h2>
 										</header>
-										<p>Omicron is a hackathon management and consulting venture. We help companies and organizations enter the growing hackathon space to find new markets, acquire talent, and discover innovative solutions. Founded in 2017, our team has worked continuously to bring tech events the necessary funding and resources. Omicron is currently supporting many organizations, hackathons, tech socials, and large scale gaming events. <p>
+										<p>Omicron is a hackathon management and consulting venture. We help companies and organizations enter the growing hackathon space to find new markets, acquire talent, and most importantly, test their products. Omicron is currently supporting many organizations, hackathons, and startups. <p>
 									</div>
 									<span class="image"><img src="images/android.jpg" alt="" /></span>
 								</div>
@@ -59,7 +59,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>What we can do for you</h2>
+									<h2>Our Services</h2>
 								</header>
 								<ul class="features">
 									<li>
@@ -74,8 +74,8 @@
 									</li>
 									<li>
 										<span class="icon major style5 fa-users"></span>
-										<h3>Event Management</h3>
-										<p>Looking to host your own hackathon or conference? We have an experienced team that can provide logistical, marketing, and sponsorship support.</p>
+										<h3>Hosting Hackathons</h3>
+										<p>Looking to host your own hackathon or online challenge? We have an experienced team that can provide logistical, marketing, and sponsorship support.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-code"></span>
